kubernetes/apps/datasci/banditweb/app/ingress-bandit-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banditweb-api
  namespace: datasci
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: internal
  rules:
    - host: bandit.${SECRET_DOMAIN}
      http:
        paths:
          - path: /bandit(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: seldon-mesh
                port:
                  number: 80
  tls:
    - hosts:
        - bandit.${SECRET_DOMAIN}
